# ai-usage-bar

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.windows-test.md  docker-compose.windows.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.claude/skills/ship-pr/: SKILL.md
.claude/skills/windows-compile-check/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: win-check.sh
src/: App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: live_fetch.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign-and-run.sh
src-tauri/src/: commands.rs  lib.rs  main.rs  notify.rs  settings.rs  state.rs
src-tauri/src/cost/: mod.rs  pricing.rs  scanner.rs
src-tauri/src/providers/: api_key.rs  credits.rs  mod.rs
src-tauri/src/providers/claude/: auth.rs  client.rs  mod.rs  normalize.rs
src-tauri/src/providers/codex/: app_server.rs  auth.rs  client.rs  mod.rs  normalize.rs
src-tauri/src/status/: mod.rs
src-tauri/src/tray/: icon.rs  menu.rs  mod.rs  theme.rs
src-tauri/src/usage/: aggregator.rs  mod.rs  selector.rs  types.rs
src-tauri/src/windows/: float_panel.rs  mod.rs
src/components/: CostFooter.tsx  ProviderGlyph.tsx  Settings.tsx  SnapshotCard.tsx  UsageDetail.tsx
src/components/settings/: ApiKeyProviderRow.tsx  controls.tsx  icons.tsx  tabs.tsx
src/dev/: mockTauri.ts
src/i18n/: en.ts  index.ts
src/styles/: global.css  panel.css  settings.css
win-share/: README.txt
