[package]
name = "ai-usage-bar"
version = "0.1.0"
description = "Menu bar / system tray monitor for Claude Code and OpenAI Codex usage limits."
authors = ["Caleb Terry"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "ai_usage_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone CLI that mirrors the menu bar app's data (usage/cost/config) for
# scripts and CI, reusing the lib's provider/cost/status code.
[[bin]]
name = "aiusagebar"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
log = "0.4"
tauri-plugin-log = "2"

# Credential storage (Keychain on macOS, Credential Manager on Windows)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Cross-platform config directory resolution
directories = "5"

# Tray bitmap rendering (numbers + progress bars)
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
imageproc = "0.25"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
# Real NSVisualEffectView vibrancy behind the floating panel so it reads as a
# Tahoe "liquid glass" surface rather than a flat opaque card.
window-vibrancy = "0.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
